// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DrawerMenu matches the last snapshot 1`] = `
<View>
  <View>
    <Image
      source={
        Object {
          "uri": "someurl",
        }
      }
    />
    <Text>
      foo
    </Text>
    <ForwardRef
      hitSlop={
        Object {
          "bottom": 5,
          "left": 10,
          "right": 10,
          "top": 5,
        }
      }
      onPress={[MockFunction]}
    >
      <Icon
        name="Settings"
      />
      <Text>
        Settings
      </Text>
    </ForwardRef>
  </View>
  <SectionList
    data={Array []}
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    onEndReachedThreshold={2}
    renderSectionHeader={[Function]}
    scrollEventThrottle={50}
    sections={
      Array [
        Object {
          "data": Array [
            Object {
              "id": 1,
              "name": "Network",
            },
          ],
          "keyExtractor": [Function],
          "label": "Networked Groups",
          "renderItem": [Function],
        },
        Object {
          "data": Array [
            Object {
              "id": 2,
              "name": "Group",
            },
          ],
          "keyExtractor": [Function],
          "label": "Independent Groups",
          "renderItem": [Function],
        },
      ]
    }
    stickySectionHeadersEnabled={false}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
  <Button
    text="Create a Group"
  />
  <View>
    <ForwardRef
      onPress={[Function]}
    >
      <Image
        source={
          Object {
            "uri": "http://anyurl",
          }
        }
      />
    </ForwardRef>
    <View>
      <Text
        numberOfLines={1}
      >
        Hello, 
        Roy Rogers
        !
      </Text>
      <View>
        <TextButton
          onPress={[Function]}
          text="Settings"
        />
      </View>
    </View>
  </View>
  <Memo(Connect(SocketListener)) />
</View>
`;

exports[`GroupRow hides badge when no newPostCount 1`] = `
<View>
  <ForwardRef
    onPress={[Function]}
  >
    <Image
      source={
        Object {
          "uri": "foo.png",
        }
      }
    />
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      Foom
    </Text>
  </ForwardRef>
</View>
`;

exports[`GroupRow highlights when matching currentGroupId 1`] = `
<View>
  <ForwardRef
    onPress={[Function]}
  >
    <Image
      source={
        Object {
          "uri": "foo.png",
        }
      }
    />
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      Foom
    </Text>
  </ForwardRef>
</View>
`;

exports[`GroupRow matches the last snapshot 1`] = `
<View>
  <ForwardRef
    onPress={[Function]}
  >
    <Image
      source={
        Object {
          "uri": "foo.png",
        }
      }
    />
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      Foom
    </Text>
    <View>
      <Text>
        7
      </Text>
    </View>
  </ForwardRef>
</View>
`;

exports[`NetworkRow hides image when no avatarUrl 1`] = `
<View>
  <ForwardRef
    onPress={[Function]}
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      Network Name
    </Text>
    <ForwardRef
      onPress={[Function]}
    >
      <Icon
        allowFontScaling={false}
        name="chevron-down"
        size={12}
      />
    </ForwardRef>
  </ForwardRef>
  <View>
    <GroupRow
      group={
        Object {
          "avatarUrl": "foo.png",
          "id": 1,
          "name": "Foom",
          "newPostCount": 1,
        }
      }
      currentGroupId={1}
      goToGroup={[Function]}
    />
  </View>
</View>
`;

exports[`NetworkRow matches the last snapshot 1`] = `
<View>
  <ForwardRef
    onPress={[Function]}
  >
    <Image
      source={
        Object {
          "uri": "network.png",
        }
      }
    />
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      Network Name
    </Text>
    <ForwardRef
      onPress={[Function]}
    >
      <Icon
        allowFontScaling={false}
        name="chevron-down"
        size={12}
      />
    </ForwardRef>
  </ForwardRef>
  <View>
    <GroupRow
      group={
        Object {
          "avatarUrl": "foo.png",
          "id": 1,
          "name": "Foom",
          "newPostCount": 1,
        }
      }
      currentGroupId={1}
      goToGroup={[Function]}
    />
  </View>
</View>
`;

exports[`NetworkRow renders correctly with nonMemberGroups 1`] = `
<View>
  <ForwardRef
    onPress={[Function]}
  >
    <Image
      source={
        Object {
          "uri": "network.png",
        }
      }
    />
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      Network Name
    </Text>
    <ForwardRef
      onPress={[Function]}
    >
      <Icon
        allowFontScaling={false}
        name="chevron-down"
        size={12}
      />
    </ForwardRef>
  </ForwardRef>
  <View>
    <GroupRow
      group={
        Object {
          "avatarUrl": "foo.png",
          "id": 1,
          "name": "Foom",
          "newPostCount": 1,
        }
      }
      currentGroupId={1}
      goToGroup={[Function]}
    />
    <ForwardRef
      onPress={[Function]}
    >
      <Text>
        See all
      </Text>
    </ForwardRef>
  </View>
</View>
`;

exports[`NetworkRow shows all groups link 1`] = `
<View>
  <ForwardRef
    onPress={[Function]}
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      All Groups
    </Text>
  </ForwardRef>
</View>
`;

exports[`SectionHeader matches the last snapshot 1`] = `
<View>
  <Text>
    NETWORKED GROUPS
  </Text>
</View>
`;

exports[`TextButton renders 1`] = `
<ForwardRef
  hitSlop={
    Object {
      "bottom": 10,
      "left": 10,
      "right": 15,
      "top": 20,
    }
  }
  onPress={[Function]}
>
  <Text>
    anything
  </Text>
</ForwardRef>
`;
